# ComfyUI-WanAnimatePlus

./: README.md  README_ZH.md  __init__.py  custom_linear.py  fp8_optimization.py  latent_preview.py  nodes.py  nodes_model_loading.py  nodes_sampler.py  nodes_utility.py  pyproject.toml  utils.py
HuMo/: audio_proj.py
LongCat/: layers.py  longcat_i2v_testing.json  nodes.py
LongVie2/: modules.py  nodes.py
MTV/: draw_pose.py  nodes.py
Ovi/: nodes_ovi.py
Ovi/vae/: vae.py
SCAIL/: nodes.py
WanMove/: example_tracks.npy  example_visibility.npy  nodes.py  trajectory.py
cache_methods/: nodes_cache.py
controlnet/: wan_controlnet.py
example_workflows/: example_workflow_001.json
fantasyportrait/: nodes.py
fantasytalking/: nodes.py
gguf/: gguf.py  gguf_utils.py
multitalk/: multitalk.py  multitalk_loop.py  nodes.py
onetoall/: controlnet.py  nodes.py  refextractor_2d.py  unet_causal_3d_blocks.py
skyreels/: nodes.py
steadydancer/: mobilenetv2_dcd.py  nodes.py  small_archs.py
taehv/: taehv.py
ultravico/sageattn/: attn_qk_int8_per_block.py  core.py  quant_per_block.py
uni3c/: controlnet.py  nodes.py
unianimate/: nodes.py
wananimateplus/: __init__.py  animate_embeds.py  core_nodes.py  core_sampler.py  sampler.py  sampler_settings.py  scheduler.py  vae.py
wanvideo/: wan_video_vae.py
wanvideo/modules/: attention.py  attention_flash.py  model.py
wanvideo/radial_attention/: attn_mask.py
wanvideo/schedulers/: __init__.py  ersde_scheduler.py  flowmatch_res_multistep.py  vitb_unipc.py
